--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <application android:allowBackup="true" android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher" android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".PreActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
