--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile 'org.mapsforge:mapsforge-core:0.6.0'
     compile 'org.mapsforge:mapsforge-map-android:0.6.0'
     compile 'org.mapsforge:mapsforge-map-reader:0.6.0'
-    compile 'org.mapsforge:svg-android:0.4.3'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'org.robolectric:android-kxml2:4.1.2_r1_rc'
+    compile 'com.caverock:androidsvg:1.2.2-beta-1'
 }
